Current state of branches/leo-ctx5
* test result summary:

Failed 30/141 test scripts, 78.72% okay. 185/2545 subtests failed

Failures are mainly due to:
- mainly PASM code using old calling conventions
- compile opcode (just invoke the compiler instead)
- missing :optional specifier or argument type mismatch
- other bugs and unfinished things

* see also the announce on p6i

--- a/branches/leo-ctx5/config/gen/makefiles/root.in
+++ b/branches/leo-ctx5/config/gen/makefiles/root.in
@@ -1160,12 +1160,15 @@ compilers-clean :
 EXTRA_TEST_ARGS = --gc-debug --running-make-test
 SRC_TEST_FILES  = t/src/*.t
 PERL_TEST_FILES = t/perl/*.t
-TEST_FILES      = t/library/*.t \
+
+# note python tests disabled
+TEST_FILES      =  \
     t/op/*.t \
     t/pmc/*.t \
     t/native_pbc/*.t \
     $(IMCC_DIR)/t/*/*.t \
-    t/dynclass/*.t \
+    t/library/*.t \
+    t/dynclass/foo.t t/dynclass/g*.t \
     t/p6rules/*.t
 
 # Common prep for all test targets.
