--- a/branches/leo-ctx5/config/gen/makefiles/root.in
+++ b/branches/leo-ctx5/config/gen/makefiles/root.in
@@ -359,6 +359,7 @@ INTERP_O_FILES = \
     $(SRC_DIR)/exceptions$(O) \
     $(SRC_DIR)/global_setup$(O) \
     $(SRC_DIR)/interpreter$(O)  \
+    $(SRC_DIR)/inter_call$(O)  \
     $(SRC_DIR)/inter_cb$(O)  \
     $(SRC_DIR)/inter_create$(O)  \
     $(SRC_DIR)/inter_misc$(O)  \
@@ -521,6 +522,7 @@ all :   flags_dummy \
 
 STR_FILES = \
     $(SRC_DIR)/builtin.str \
+    $(SRC_DIR)/inter_call.str \
     $(SRC_DIR)/inter_cb.str \
     $(SRC_DIR)/inter_misc.str \
     $(SRC_DIR)/global.str \
@@ -918,6 +920,9 @@ $(SRC_DIR)/extend$(O) : $(GENERAL_H_FILES) $(INC_DIR)/extend.h
 
 $(SRC_DIR)/interpreter$(O) : $(SRC_DIR)/interpreter.c $(GENERAL_H_FILES) \
     ${TEMP_jit_h}
+
+$(SRC_DIR)/inter_call$(O) : $(SRC_DIR)/inter_call.c $(GENERAL_H_FILES) \
+    $(SRC_DIR)/inter_call.str
 
 $(SRC_DIR)/inter_cb$(O) : $(SRC_DIR)/inter_cb.c $(GENERAL_H_FILES) \
     $(SRC_DIR)/inter_cb.str
