New data structures in pobj.h for PMC. It should compile, although there is a dirty hack. Data structures are not yet definitive (especially pmc_body) but should be enough to start the things.
Also added gc_gmc.c to the list of files needing to the Makefile and a call to gc_gmc_init.

--- a/branches/gmc/config/gen/makefiles/root.in
+++ b/branches/gmc/config/gen/makefiles/root.in
@@ -406,6 +406,7 @@ INTERP_O_FILES = \
     $(SRC_DIR)/dod$(O) \
     $(SRC_DIR)/gc_ims$(O) \
     $(SRC_DIR)/gc_gms$(O) \
+    $(SRC_DIR)/gc_gmc$(O) \
     $(SRC_DIR)/method_util$(O) \
     $(SRC_DIR)/exit$(O) \
     $(SRC_DIR)/misc$(O) \
