Fix the dependency for smoke.html, and update the harness with both the original code from nothingmuch (missed earlier due to an overlooked svn conflict), as well as an update for harness_args (allow running the harness with no extra args)

--- a/branches/leo-ctx5/config/gen/makefiles/root.in
+++ b/branches/leo-ctx5/config/gen/makefiles/root.in
@@ -1573,7 +1573,7 @@ tags.dummy:
 #
 ###############################################################################
 
-smoke.html : $(PARROT)
+smoke.html : all
 	$(PERL) t/harness --html
 
 smoke-submit : smoke.html
