At particle's suggestion, convert "make smoke-submit" into "make smoke".
Now the default "make smoke" will build parrot, run the test suite
(generating a local smoke.html file), and submit it to the server if
possible.

--- a/branches/leo-ctx5/config/gen/makefiles/root.in
+++ b/branches/leo-ctx5/config/gen/makefiles/root.in
@@ -1573,10 +1573,8 @@ tags.dummy:
 #
 ###############################################################################
 
-smoke.html : all
+smoke : all
 	$(PERL) t/harness --html
-
-smoke-submit : smoke.html
 	$(PERL) util/smokeserv-client.pl smoke.html
 
 smoke-clean :
