Bulk add deps to the dynpmc files.

--- a/src/dynpmc/Defines.in
+++ b/src/dynpmc/Defines.in
@@ -13,3 +13,59 @@ DYNPMC_FOO = \
 DYNPMC_FOO_OBJS = \
     src/dynpmc/foo$(O) \
     src/dynpmc/foo2$(O)
+
+DYNPMC_H_FILES = \
+    include/parrot/caches.h \
+    include/parrot/call.h \
+    include/parrot/cclass.h \
+    include/parrot/charset.h \
+    include/parrot/compiler.h \
+    include/parrot/config.h \
+    include/parrot/context.h \
+    include/parrot/core_pmcs.h \
+    include/parrot/core_types.h \
+    include/parrot/datatypes.h \
+    include/parrot/debugger.h \
+    include/parrot/dynext.h \
+    include/parrot/encoding.h \
+    include/parrot/enums.h \
+    include/parrot/exceptions.h \
+    include/parrot/exit.h \
+    include/parrot/extend.h \
+    include/parrot/feature.h \
+    include/parrot/gc_api.h \
+    include/parrot/global.h \
+    include/parrot/global_setup.h \
+    include/parrot/has_header.h \
+    include/parrot/hash.h \
+    include/parrot/hll.h \
+    include/parrot/interpreter.h \
+    include/parrot/io.h \
+    include/parrot/key.h \
+    include/parrot/library.h \
+    include/parrot/longopt.h \
+    include/parrot/memory.h \
+    include/parrot/misc.h \
+    include/parrot/multidispatch.h \
+    include/parrot/nci.h \
+    include/parrot/oo.h \
+    include/parrot/op.h \
+    include/parrot/oplib.h \
+    include/parrot/packfile.h \
+    include/parrot/parrot.h \
+    include/parrot/platform.h \
+    include/parrot/platform_interface.h \
+    include/parrot/platform_limits.h \
+    include/parrot/pmc.h \
+    include/parrot/pmc_freeze.h \
+    include/parrot/pobj.h \
+    include/parrot/scheduler.h \
+    include/parrot/settings.h \
+    include/parrot/stat.h \
+    include/parrot/string.h \
+    include/parrot/string_funcs.h \
+    include/parrot/string_primitives.h \
+    include/parrot/sub.h \
+    include/parrot/thread.h \
+    include/parrot/vtables.h \
+    include/parrot/warnings.h
