--- a/src/dynpmc/Rules.in
+++ b/src/dynpmc/Rules.in
@@ -3,7 +3,9 @@ $(DYNEXT_DIR)/dynlexpad$(LOAD_EXT): src/dynpmc/dynlexpad$(O)
 #IF(win32):	if exist $@.manifest mt.exe -nologo -manifest $@.manifest -outputresource:$@;2
 #IF(cygwin or hpux):   $(CHMOD) 0775 $@
 
-src/dynpmc/dynlexpad.c: src/dynpmc/dynlexpad.dump
+src/dynpmc/dynlexpad$(O): src/dynpmc/pmc_dynlexpad.h $(DYNPMC_H_FILES)
+
+src/dynpmc/dynlexpad.c: src/dynpmc/dynlexpad.dump $(DYNPMC_H_FILES)
 	$(PMC2CC) src/dynpmc/dynlexpad.pmc
 
 src/dynpmc/dynlexpad.dump: src/dynpmc/dynlexpad.pmc vtable.dump
@@ -14,15 +16,21 @@ $(DYNEXT_DIR)/foo_group$(LOAD_EXT): $(DYNPMC_FOO_OBJS) src/dynpmc/foo_group$(O)
 #IF(win32):	if exist $@.manifest mt.exe -nologo -manifest $@.manifest -outputresource:$@;2
 #IF(cygwin or hpux):   $(CHMOD) 0775 $@
 
+src/dynpmc/foo_group$(O): src/dynpmc/pmc_foo.h src/dynpmc/pmc_foo2.h $(DYNPMC_H_FILES)
+
 src/dynpmc/foo_group.c: $(DYNPMC_FOO_OBJS)
 	$(PMC2C) --library foo_group --c $(DYNPMC_FOO)
 	$(MV) foo_group.c src/dynpmc/foo_group.c
 
-src/dynpmc/foo.c: src/dynpmc/foo.dump
+src/dynpmc/foo$(O): src/dynpmc/pmc_foo.h $(DYNPMC_H_FILES)
+
+src/dynpmc/foo.c: src/dynpmc/foo.dump $(DYNPMC_H_FILES)
 	$(PMC2CC) src/dynpmc/foo.pmc
 
 src/dynpmc/foo.dump: src/dynpmc/foo.pmc vtable.dump
 	$(PMC2CD) src/dynpmc/foo.pmc
+
+src/dynpmc/foo2$(O): src/dynpmc/pmc_foo.h src/dynpmc/pmc_foo2.h $(DYNPMC_H_FILES)
 
 src/dynpmc/foo2.c: src/dynpmc/foo2.dump src/dynpmc/foo.pmc
 	$(PMC2CC) src/dynpmc/foo2.pmc
@@ -33,6 +41,8 @@ src/dynpmc/foo2.dump: src/dynpmc/foo2.pmc src/dynpmc/foo.dump vtable.dump
 $(DYNEXT_DIR)/pccmethod_test$(LOAD_EXT): src/dynpmc/pccmethod_test$(O)
 	$(LD)  @ld_out@$(DYNEXT_DIR)/pccmethod_test$(LOAD_EXT) src/dynpmc/pccmethod_test$(O) $(LINKARGS)
 #IF(win32):	if exist $@.manifest mt.exe -nologo -manifest $@.manifest -outputresource:$@;2
+
+src/dynpmc/pccmethod_test$(O): src/dynpmc/pmc_pccmethod_test.h $(DYNPMC_H_FILES)
 
 src/dynpmc/pccmethod_test.c: src/dynpmc/pccmethod_test.dump
 	$(PMC2CC) src/dynpmc/pccmethod_test.pmc
@@ -45,6 +55,8 @@ $(DYNEXT_DIR)/rotest$(LOAD_EXT): src/dynpmc/rotest$(O)
 #IF(win32):	if exist $@.manifest mt.exe -nologo -manifest $@.manifest -outputresource:$@;2
 #IF(cygwin or hpux):   $(CHMOD) 0775 $@
 
+src/dynpmc/rotest$(O): src/dynpmc/pmc_rotest.h $(DYNPMC_H_FILES)
+
 src/dynpmc/rotest.c: src/dynpmc/rotest.dump
 	$(PMC2CC) src/dynpmc/rotest.pmc
 
@@ -56,6 +68,8 @@ $(DYNEXT_DIR)/rational$(LOAD_EXT): src/dynpmc/rational$(O)
 #IF(win32):	if exist $@.manifest mt.exe -nologo -manifest $@.manifest -outputresource:$@;2
 #IF(cygwin or hpux):   $(CHMOD) 0775 $@
 
+src/dynpmc/rational$(O): src/dynpmc/pmc_rational.h $(DYNPMC_H_FILES)
+
 src/dynpmc/rational.c: src/dynpmc/rational.dump
 	$(PMC2CC) src/dynpmc/rational.pmc
 
@@ -66,6 +80,8 @@ $(DYNEXT_DIR)/subproxy$(LOAD_EXT): src/dynpmc/subproxy$(O)
 	$(LD)  @ld_out@$(DYNEXT_DIR)/subproxy$(LOAD_EXT) src/dynpmc/subproxy$(O) $(LINKARGS)
 #IF(win32):	if exist $@.manifest mt.exe -nologo -manifest $@.manifest -outputresource:$@;2
 #IF(cygwin or hpux):   $(CHMOD) 0775 $@
+
+src/dynpmc/subproxy$(O): src/dynpmc/pmc_subproxy.h $(DYNPMC_H_FILES)
 
 src/dynpmc/subproxy.c: src/dynpmc/subproxy.dump
 	$(PMC2CC) src/dynpmc/subproxy.pmc
