--- a/src/dynpmc/Defines.in
+++ b/src/dynpmc/Defines.in
@@ -33,6 +33,7 @@ DYNPMC_H_FILES = \
     include/parrot/exceptions.h \
     include/parrot/exit.h \
     include/parrot/extend.h \
+    include/parrot/extend_vtable.h \
     include/parrot/feature.h \
     include/parrot/gc_api.h \
     include/parrot/global.h \
@@ -54,6 +55,7 @@ DYNPMC_H_FILES = \
     include/parrot/oplib.h \
     include/parrot/packfile.h \
     include/parrot/parrot.h \
+    include/parrot/pbcversion.h \
     include/parrot/platform.h \
     include/parrot/platform_interface.h \
     include/parrot/platform_limits.h \
@@ -68,5 +70,29 @@ DYNPMC_H_FILES = \
     include/parrot/string_primitives.h \
     include/parrot/sub.h \
     include/parrot/thread.h \
+    include/parrot/vtable.h \
     include/parrot/vtables.h \
-    include/parrot/warnings.h
+    include/parrot/warnings.h \
+    include/pmc/pmc_callcontext.h \
+    include/pmc/pmc_continuation.h \
+    include/pmc/pmc_default.h
+
+#IF(win32 and cc==gcc):LIB_ZLIB = -lz                                           
+#ELSIF(win32):LIB_ZLIB = zlib.lib
+#ELSE:LIB_ZLIB = -lz
+
+DYNPMC_CLEANUPS = \
+    $(DYNPMC_TARGETS) \
+    $(DYNPMC_FOO_OBJS) \
+    src/dynpmc/*.dump \
+    src/dynpmc/pmc_*.h \
+    src/dynpmc/*_group.h \
+    src/dynpmc/*.c \
+#IF(o):    src/dynpmc/*$(O) \
+#IF(win32):    src/dynpmc/*.lib" \
+#IF(win32):    src/dynpmc/*.pdb" \
+#IF(win32):    src/dynpmc/*.ilk" \
+#IF(win32):    src/dynpmc/*.exp" \
+#IF(win32):    src/dynpmc/*.def" \
+#IF(win32):    src/dynpmc/*.manifest" \
+#IF(load_ext):    src/dynpmc/*@load_ext@
