--- a/config/gen/makefiles/root.in
+++ b/config/gen/makefiles/root.in
@@ -1444,16 +1444,16 @@ src/runcore/cores$(O) : src/runcore/cores.str \
 	$(PARROT_H_HEADERS)
 
 src/embed$(O) : $(PARROT_H_HEADERS) $(INC_DIR)/embed.h \
-	src/embed.c \
-	$(INC_DIR)/oplib/ops.h $(INC_DIR)/runcore_api.h \
-	compilers/imcc/imc.h \
-	compilers/imcc/cfg.h \
-	compilers/imcc/debug.h \
-	compilers/imcc/instructions.h \
-	compilers/imcc/sets.h \
-	compilers/imcc/symreg.h \
-	compilers/imcc/unit.h \
-	include/pmc/pmc_sub.h
+        src/embed.c src/embed.str \
+        $(INC_DIR)/oplib/ops.h $(INC_DIR)/runcore_api.h \
+        compilers/imcc/imc.h \
+        compilers/imcc/cfg.h \
+        compilers/imcc/debug.h \
+        compilers/imcc/instructions.h \
+        compilers/imcc/sets.h \
+        compilers/imcc/symreg.h \
+        compilers/imcc/unit.h \
+		include/pmc/pmc_sub.h
 
 src/dataypes$(O) : $(GENERAL_H_FILES) src/dataypes.c
 
