--- a/config/gen/makefiles/root.in
+++ b/config/gen/makefiles/root.in
@@ -1809,6 +1809,7 @@ clean : \
 #IF(has_perldoc):    html-clean \
     examples-clean \
     ext-clean \
+    opsc-clean \
 #UNLESS(win32):    cover-clean \
     editor-clean
 	$(RM_F) chartypes "*.s" "*~"
@@ -1820,6 +1821,7 @@ clean : \
 	$(RM_F) $(PIRC_CLEANUPS) $(PCT_CLEANUPS) $(DATA_JSON_CLEANUPS)
 	$(RM_F) $(DYNOPLIBS_CLEANUPS) $(DYNPMC_CLEANUPS)
 	$(RM_F) $(GEN_PASM_INCLUDES) $(GEN_PM_INCLUDES)
+	$(RM_F) ext/nqp-rx/src/gen/settings.pir
 
 prog-clean :
 	$(RM_F) \
