--- a/config/gen/makefiles/root.in
+++ b/config/gen/makefiles/root.in
@@ -1843,7 +1843,7 @@ prog-clean :
     $(INSTALLABLETAPIR) \
     pbc_to_exe.pbc pbc_to_exe.c pbc_to_exe$(O) pbc_to_exe$(EXE) \
     $(NCI_THUNK_GEN) parrot_nci_thunk_gen.c parrot_nci_thunk_gen$(O) parrot_nci_thunk_gen.pbc \
-	ops2c.pbc ops2c.c ops2c$(O) ops2c$(EXE) \
+	ops2c.pbc ops2c.c ops2c$(O) ops2c$(EXE) ops2c.pir \
     tapir.pbc tapir.c tapir$(O) tapir$(EXE) \
     parrot_config$(EXE) parrot_config.c parrot_config$(O) parrot_config.pbc \
     compilers/imcc/main$(O) \
