--- a/config/gen/makefiles/root.in
+++ b/config/gen/makefiles/root.in
@@ -797,7 +797,7 @@ installable: all $(INSTALLABLEPARROT) $(INSTALLABLEPDUMP) $(INSTALLABLEDIS) $(IN
 
 bootstrap-ops : $(OPS2C)
 	$(OPS2C) --core
-	make
+	$(MAKE)
 
 runtime/parrot/include/parrotlib.pbc: runtime/parrot/library/parrotlib.pir $(PARROT) $(GEN_PASM_INCLUDES)
 	$(PARROT) -o $@ runtime/parrot/library/parrotlib.pir
