--- a/config/gen/makefiles/root.in
+++ b/config/gen/makefiles/root.in
@@ -1925,20 +1925,14 @@ dynext-clean :
 # XXX Is there a danger of too long command lines in the $(RM_F) commands,
 # or is there an automatic xargs?
 test-clean :
-	$(RM_F) \
-    "t/compilers/*/*.out" \
-    "t/compilers/*/*.pasm" \
-    "t/compilers/*/*.pbc" \
-    "t/compilers/*/*_pbcexe*" \
-    "t/compilers/*/*.pir" \
-    "t/compilers/*/*.stabs.s"
-	$(RM_F) \
-    "t/compilers/*/*/*.out" \
-    "t/compilers/*/*/*.pasm" \
-    "t/compilers/*/*/*.pbc" \
-    "t/compilers/*/*/*_pbcexe*" \
-    "t/compilers/*/*/*.pir" \
-    "t/compilers/*/*/*.stabs.s"
+	$(RM_F) t/compilers/data_json/*.pir
+	$(RM_F) t/compilers/imcc/imcpasm/*.pir
+	$(RM_F) t/compilers/imcc/syn/*.pir t/compilers/imcc/syn/*.pasm
+	$(RM_F) t/compilers/imcc/reg/*.pir t/compilers/imcc/reg/*.pasm
+	$(RM_F) t/compilers/pct/*.pir
+	$(RM_F) t/compilers/pge/perl6regex/*.pir
+	$(RM_F) t/compilers/pge/*.pir
+	$(RM_F) t/compilers/tge/*.pir
 	$(RM_F) \
     "t/*/*$(O)" \
     "t/*/*.out" \
