--- a/config/gen/makefiles/root.in
+++ b/config/gen/makefiles/root.in
@@ -248,7 +248,6 @@ GEN_SOURCES = \
     src/extra_nci_thunks.c
 
 GEN_MODULES = \
-    lib/Parrot/OpLib/core.pm
 
 GEN_LIBRARY = \
     $(LIBRARY_DIR)/Archive/Tar.pbc \
@@ -799,7 +798,7 @@ installable: all $(INSTALLABLEPARROT) $(INSTALLABLEPDUMP) $(INSTALLABLEDIS) $(IN
 
 bootstrap-ops : $(OPS2C)
 	$(OPS2C) --core
-	$(MAKE)
+	$(MAKE) .
 
 runtime/parrot/include/parrotlib.pbc: runtime/parrot/library/parrotlib.pir $(PARROT) $(GEN_PASM_INCLUDES)
 	$(PARROT) -o $@ runtime/parrot/library/parrotlib.pir
