--- a/config/gen/makefiles/root.in
+++ b/config/gen/makefiles/root.in
@@ -1818,7 +1818,7 @@ clean : \
 	$(RM_F) $(PIRC_CLEANUPS) $(PCT_CLEANUPS) $(DATA_JSON_CLEANUPS)
 	$(RM_F) $(DYNOPLIBS_CLEANUPS) $(DYNPMC_CLEANUPS)
 	$(RM_F) $(GEN_PASM_INCLUDES) $(GEN_PM_INCLUDES)
-	$(RM_F) ext/nqp-rx/src/gen/settings.pir $(OPSC_CLEANUPS)
+	$(RM_F) $(NQPRX_CLEANUPS)  $(OPSC_CLEANUPS)
 
 prog-clean :
 	$(RM_F) \
