--- a/config/gen/makefiles/root.in
+++ b/config/gen/makefiles/root.in
@@ -613,6 +613,7 @@ all : \
     $(DATA_JSON_LIB_PBCS) \
     $(NQP_LIB_PBCS) \
     $(GEN_LIBRARY) \
+    $(DYNOPLIBS_TARGETS) \
     $(LIBNCI_TEST_SO)
 
 corevm : \
@@ -622,8 +623,7 @@ corevm : \
     runtime/parrot/include/parrotlib.pbc \
     runtime/parrot/include/config.fpmc \
     $(LIBRARY_DIR)/Test/More.pbc \
-    $(DYNPMC_TARGETS) \
-    $(DYNOPLIBS_TARGETS)
+    $(DYNPMC_TARGETS)
 
 $(GEN_LIBRARY) : $(PARROT) $(GEN_PASM_INCLUDES)
 
