--- a/src/dynpmc/Defines.in
+++ b/src/dynpmc/Defines.in
@@ -26,14 +26,18 @@ DYNPMC_INSTRUMENT = \
     src/dynpmc/instrumentstubbase.pmc \
     src/dynpmc/instrumentgc.pmc \
     src/dynpmc/instrumentop.pmc \
-    src/dynpmc/instrumentvtable.pmc
+    src/dynpmc/instrumentvtable.pmc \
+    src/dynpmc/instrumentclass.pmc \
+    src/dynpmc/instrumentobject.pmc
 
 DYNPMC_INSTRUMENT_OBJS = \
     src/dynpmc/instrument$(O) \
     src/dynpmc/instrumentstubbase$(O) \
     src/dynpmc/instrumentgc$(O) \
     src/dynpmc/instrumentop$(O) \
-    src/dynpmc/instrumentvtable$(O)
+    src/dynpmc/instrumentvtable$(O) \
+    src/dynpmc/instrumentclass$(O) \
+    src/dynpmc/instrumentobject$(O)
 
 DYNPMC_H_FILES = \
     include/parrot/caches.h \
