--- a/ports/debian/control
+++ b/ports/debian/control
@@ -3,8 +3,8 @@ Section: interpreters
 Priority: optional
 Maintainer: Debian Parrot Maintainers <pkg-parrot-devel@lists.alioth.debian.org>
 Uploaders: Allison Randal <allison@parrot.org>, Nuno Carvalho <mestre.smash@gmail.com>, Patrick Michaud <pmichaud@pobox.com>
-Build-Depends: debhelper (>= 5.0.0), perl, perl-doc, libgdbm-dev, libreadline-dev, quilt
-Standards-Version: 3.8.4
+Build-Depends: debhelper (>= 5.0.0), perl, perl-doc, libreadline-dev, quilt
+Standards-Version: 3.9.1
 
 Package: parrot
 Architecture: any
@@ -26,7 +26,7 @@ Description: A minimal install of the Parrot VM
  to get up and running in the average use case, and is sufficient to run most
  language implementations.
 
-Package: libparrot2.0.0
+Package: libparrot2.6.0
 Architecture: any
 Section: libs
 Depends: ${shlibs:Depends}, ${misc:Depends}
@@ -37,7 +37,7 @@ Description: Parrot shared library
 Package: libparrot-dev
 Architecture: any
 Section: libdevel
-Depends: ${misc:Depends}, libparrot2.0.0 (= ${binary:Version}), parrot
+Depends: ${misc:Depends}, libparrot2.6.0 (= ${binary:Version}), parrot
 Description: Parrot shared library development files
  This package contains header files and a static library, needed to develop
  applications which embed Parrot.
