--- a/src/dynpmc/Rules.in
+++ b/src/dynpmc/Rules.in
@@ -272,3 +272,25 @@ src/dynpmc/instrumentobject.c: src/dynpmc/instrumentobject.dump
 src/dynpmc/instrumentobject.dump: src/dynpmc/instrumentobject.pmc vtable.dump $(CLASS_O_FILES) \
     src/dynpmc/instrumentclass.dump
 	$(PMC2CD) src/dynpmc/instrumentobject.pmc
+
+src/dynpmc/pmc_instrumentinvokable.h : src/dynpmc/instrumentinvokable.c
+
+src/dynpmc/instrumentinvokable$(O): src/dynpmc/instrumentinvokable.c $(DYNPMC_H_FILES) \
+    src/dynpmc/pmc_instrumentinvokable.h
+
+src/dynpmc/instrumentinvokable.c: src/dynpmc/instrumentinvokable.dump
+	$(PMC2CC) src/dynpmc/instrumentinvokable.pmc
+
+src/dynpmc/instrumentinvokable.dump: src/dynpmc/instrumentinvokable.pmc vtable.dump $(CLASS_O_FILES)
+	$(PMC2CD) src/dynpmc/instrumentinvokable.pmc
+
+src/dynpmc/pmc_instrumentruncore.h : src/dynpmc/instrumentruncore.c
+
+src/dynpmc/instrumentruncore$(O): src/dynpmc/instrumentruncore.c $(DYNPMC_H_FILES) \
+    src/dynpmc/pmc_instrumentruncore.h
+
+src/dynpmc/instrumentruncore.c: src/dynpmc/instrumentruncore.dump
+	$(PMC2CC) src/dynpmc/instrumentruncore.pmc
+
+src/dynpmc/instrumentruncore.dump: src/dynpmc/instrumentruncore.pmc vtable.dump $(CLASS_O_FILES)
+	$(PMC2CD) src/dynpmc/instrumentruncore.pmc
