--- a/config/gen/makefiles/root.in
+++ b/config/gen/makefiles/root.in
@@ -2515,6 +2515,11 @@ tags-vi: tags.vi.dummy
 
 tags.vi.dummy:
 
+tags: tags.dummy
+	@echo 'There is no "tags" target. You want tags-vi or tags-emacs.'
+
+tags.dummy:
+
 CRITIC_FILES = 'lib/Parrot'
 
 perlcritic:
