--- a/src/dynpmc/Rules.in
+++ b/src/dynpmc/Rules.in
@@ -184,8 +184,9 @@ $(DYNEXT_DIR)/instrument_group$(LOAD_EXT): $(DYNPMC_INSTRUMENT_OBJS) src/dynpmc/
 #IF(cygwin or hpux):   $(CHMOD) 0775 $@
 
 src/dynpmc/instrument_group$(O): src/dynpmc/instrument.c src/dynpmc/instrumentop.c \
-    src/dynpmc/instrumentstubbase.c \
-    src/dynpmc/instrumentvtable.c src/dynpmc/instrumentgc.c $(DYNPMC_H_FILES)
+    src/dynpmc/instrumentstubbase.c src/dynpmc/instrumentgc.c \
+    src/dynpmc/instrumentclass.c src/dynpmc/instrumentinvokable.c \
+    src/dynpmc/instrumentruncore.pmc $(DYNPMC_H_FILES)
 
 src/dynpmc/instrument_group.c: $(DYNPMC_INSTRUMENT_OBJS)
 	$(PMC2C) --library instrument_group --c $(DYNPMC_INSTRUMENT)
@@ -237,18 +238,6 @@ src/dynpmc/instrumentop.c: src/dynpmc/instrumentop.dump
 src/dynpmc/instrumentop.dump: src/dynpmc/instrumentop.pmc vtable.dump $(CLASS_O_FILES)
 	$(PMC2CD) src/dynpmc/instrumentop.pmc
 
-src/dynpmc/pmc_instrumentvtable.h : src/dynpmc/instrumentvtable.c
-
-src/dynpmc/instrumentvtable$(O): src/dynpmc/instrumentvtable.c $(DYNPMC_H_FILES) \
-    src/dynpmc/pmc_instrumentvtable.h
-
-src/dynpmc/instrumentvtable.c: src/dynpmc/instrumentvtable.dump
-	$(PMC2CC) src/dynpmc/instrumentvtable.pmc
-
-src/dynpmc/instrumentvtable.dump: src/dynpmc/instrumentvtable.pmc vtable.dump $(CLASS_O_FILES) \
-    src/dynpmc/instrumentstubbase.dump
-	$(PMC2CD) src/dynpmc/instrumentvtable.pmc
-
 src/dynpmc/pmc_instrumentclass.h : src/dynpmc/instrumentclass.c
 
 src/dynpmc/instrumentclass$(O): src/dynpmc/instrumentclass.c $(DYNPMC_H_FILES) \
@@ -258,7 +247,7 @@ src/dynpmc/instrumentclass.c: src/dynpmc/instrumentclass.dump
 	$(PMC2CC) src/dynpmc/instrumentclass.pmc
 
 src/dynpmc/instrumentclass.dump: src/dynpmc/instrumentclass.pmc vtable.dump $(CLASS_O_FILES) \
-    src/dynpmc/instrumentvtable.dump
+    src/dynpmc/instrumentstubbase.dump
 	$(PMC2CD) src/dynpmc/instrumentclass.pmc
 
 src/dynpmc/pmc_instrumentobject.h : src/dynpmc/instrumentobject.c
