check for core_ops (doesn't occur as a loaded dynoplib). also update core ops to report library name as "core_ops" in stead of "core"

--- a/config/gen/config_h/config_h.in
+++ b/config/gen/config_h/config_h.in
@@ -150,7 +150,7 @@ typedef void DPOINTER;
 #define PARROT_@jitcpu@ 1
 
 /* Oplib and dynamic ops related. */
-#define PARROT_CORE_OPLIB_NAME "core"
+#define PARROT_CORE_OPLIB_NAME "core_ops"
 #define PARROT_CORE_OPLIB_INIT Parrot_DynOp_core_@MAJOR@_@MINOR@_@PATCH@
 
 /* ICU. */
