generate a pbc file for packfileannotations test, TT #1712

--- a/config/gen/makefiles/root.in
+++ b/config/gen/makefiles/root.in
@@ -1668,6 +1668,7 @@ CONFIGURE_TEST_FILES = \
     t/configure/*.t \
     t/steps/*.t
 PBC_TEST_FILES = \
+    t/pmc/testlib/annotations.pbc \
     t/pmc/testlib/number.pbc
 
 # pbc files used for several tests
@@ -1675,6 +1676,9 @@ pbctestfiles: $(PARROT) $(PBC_TEST_FILES)
 
 t/pmc/testlib/number.pbc: t/pmc/testlib/number.pasm
 	$(PARROT) -o t/pmc/testlib/number.pbc t/pmc/testlib/number.pasm
+
+t/pmc/testlib/annotations.pbc: t/pmc/testlib/annotations.pir
+	$(PARROT) -o t/pmc/testlib/annotations.pbc t/pmc/testlib/annotations.pir
 
 # Common prep for all test targets.
 # We probably need a complete build before running the tests.
