[gc] Make sure that trace_system_stack is not inlined

--- a/config/gen/config_h/config_h.in
+++ b/config/gen/config_h/config_h.in
@@ -84,6 +84,8 @@ struct PackFile;      typedef struct PackFile * Parrot_PackFile;
 #endif
 #endif
 
+#define PARROT_NOINLINE @noinline@
+
 #if defined(PARROT_IN_CORE)
 
 /* Put any other symbols here. */
